refactor: Update endpoints (#37)
* refactor: Create reusable middleware to get and inject the jwt

* refactor: Update login and challenge endpoints

* docs(openapi): Update login and refresh endpoints in spec

* refactor: Update login and refresh endpoints according to the spec

* test: Update tests using random data

* refactor: Remove unreachable block

* chore(deps): Update dependencies
