# src/views/_authentication_views.py
@@ -1,14 +1,16 @@
 import flask
 from src.controllers import _authentication_controllers
+from src.middlewares import auth_middlewares
 
 views = flask.Blueprint("authentication", __name__)
 
 
-@views.route("/auth_login", methods=["POST"])
+@views.route("/auth/login", methods=["POST"])
 def auth_login():
     return _authentication_controllers.login_handler()
 
 
-@views.route("/auth_refresh", methods=["POST"])
-def auth_refresh():
-    return _authentication_controllers.challenge()
+@views.route("/auth/refresh", methods=["POST"])
+@auth_middlewares.token_required
+def auth_refresh(token):
+    return _authentication_controllers.challenge_handler(token)
